rnsc/tests/snapshots/error-parser-outer_class_sub_directive-trailing_tokens.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
; Tests that trailing tokens after .outer_class are detected and reported.
; Expected error: E-039 (outer_class trailing tokens)

.class public MyClass
.super java/lang/Object

.inner_classes_attr
    .outer_class com/profs/Main trailing
.inner_classes_attr_end

.class_end
----- STDERR -----
[E-039] Error: unexpected trailing tokens after .outer_class directive
   ╭─[ test_data/rns_integration/error/parser/outer_class_sub_directive/trailing_tokens.rns:8:33 ]
   │
 8 │     .outer_class com/profs/Main trailing
   │                                │────┬───  
   │                                ╰────────── expected end of .outer_class directive here
   │                                     │     
   │                                     ╰───── but found 1 trailing token
   │ 
   │ Help: Remove the trailing tokens or move them to a valid context.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-039
───╯
----- JAVAP -----
not generated
